--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Concert+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Github</title>
 </head>
 <body>
-    
+    <h1 class="tittle">Curso de Github</h1>
+    <p>Nunca pares de Aprender</p>
 </body>
 </html>
