--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <h1 class="tittle">Curso de Github</h1>
-    <p>Nunca pares de Aprender</p>
+    <p>Nunca pares de Aprender.</p>
 </body>
 </html>
